# pleyx

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
scripts/: png_to_ico.ps1
src/: config.cpp  config.h  config.rs  discord.cpp  discord.h  discord.rs  discord_ipc.cpp  discord_ipc.h  image_cache.cpp  image_cache.h  main.cpp  main.rs  plex.cpp  plex.h  plex.rs  resource.h  resources.rc  tray_icon.cpp  tray_icon.h
